--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 
 <body>
 <div class="container col col-md-5">
-    <h1>Predict Salary Analysis</h1>
+    <h1>Predict Salary Analysis -By Biswaraj Baral</h1>
 
     <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
